// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepSequenceItem /> basic render 1`] = `
<li
  className="carbon-step-sequence-item carbon-step-sequence-item--incomplete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> completed render 1`] = `
<li
  className="carbon-step-sequence-item carbon-step-sequence-item--complete"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      <Icon
        bgSize="small"
        type="tick"
      />
    </span>
    bar
  </div>
</li>
`;

exports[`<StepSequenceItem /> current render 1`] = `
<li
  aria-current="step"
  className="carbon-step-sequence-item carbon-step-sequence-item--current"
>
  <div
    className="carbon-step-sequence-item__label"
  >
    <span
      className="carbon-step-sequence-item__indicator"
    >
      2
    </span>
    bar
  </div>
</li>
`;
